
maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
Copyright (c) 1996-2016 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.

For change history for MOST, see most/docs/CHANGES.

Changes since 6.0b1
-----------------

10/19/16
    - Improved robustness of infeasibility detection when 'pf.enforce_q_lims'
      option is used.

10/14/16
    - Fixed bugs in AC OPF solver code for fmincon, IPOPT, and Knitro
      involving shadow prices on variable bounds, when upper and lower bounds
      are equal (such as a voltage magnitude setpoint when 'opf.use_vg' is 1).
      In IPOPT the prices are missing, and Knitro and fmincon can both return
      negative prices on the wrong constraint.

10/13/16
    - Added 'opf.use_vg' option to provide a convenient way to have the
      OPF respect the generator voltage setpoints specified in the gen
      matrix.

10/4/16
    - Improve backward compatibility of mpoption(), allow it to handle
      old-style option vectors from earlier versions of MATPOWER, namely
      3.2 and 4.0, and to accept on old style options vector with new-style
      name/value pair option overrides.

9/22/16
    - Update tests for compatibility with Optimization Toolbox 7.5 (R2016b),
      which removes 'active-set' algorithm for quadprog() and 'active-set'
      and 'simplex' for linprog().
    - Fix fatal error when using some SDP_PF functions when CPLEX is not
      installed.

9/19/16
    - Fix dimension bug in makeBdc() when last bus is not connected (should
      never happen if bus is properly marked as type NONE). Thanks to
      Samuel Perkin.

8/15/16
    - Fix a harmless bug in @opt_model where variable, constraint and
      cost sets indexed by a single variable would allocate a square
      matrix of starting and ending indices, rather than a simple vector.
      Thanks to Alberto Lamadrid for catching this.

7/18/16