@@ -18,6 +18,7 @@ Changes since 6.0b1
 10/19/16
     - Improved robustness of infeasibility detection when 'pf.enforce_q_lims'
       option is used.
+    - Add tests for power flow with 'pf.enforce_q_lims' option.
 
 10/14/16
     - Fixed bugs in AC OPF solver code for fmincon, IPOPT, and Knitro
